--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ numpy==1.21.0
 pandas==1.3.5
 python-dateutil==2.8.1
 pytz==2021.1
-pywin32==304
+pywin32==304; platform_system=="Windows"
 scikit-learn==1.0.2
 scipy==1.7.3
 six==1.16.0
